Fixed tiles and spacing

--- a/styles/main/main.css
+++ b/styles/main/main.css
@@ -40,6 +40,11 @@ body {
   color: #dbdbdb;
 }
 
+h3 {
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
+
 @media screen and (min-width: 768px) {
   .navbar {
     -webkit-box-pack: center;
@@ -54,26 +59,20 @@ body {
   .hero h1 {
     height: 1.2em;
   }
-  #feature-header {
-    font-size: 2em;
-    margin-bottom: 1.5em;
-    margin-top: 1em;
-  }
   .tile-grid {
     font-size: large;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
     gap: 2vh;
   }
   .feature {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 2fr;
-        grid-template-columns: 1fr 2fr;
-    height: 60vh;
-    margin: 0vw 10vw;
+    -ms-grid-columns: 1.5fr 1fr;
+        grid-template-columns: 1.5fr 1fr;
+    margin: 0vw 20vw;
     max-width: 70vw;
-    font-size: larger;
+    font-size: large;
   }
   .feature-skill-box {
     font-size: 0.8em;
@@ -176,18 +175,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 10vh;
+  margin-bottom: 8vh;
 }
 
 .feature {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 100vh;
+  display: -ms-grid;
+  display: grid;
   margin-bottom: 10vh;
 }
 
@@ -202,14 +195,13 @@ body {
   text-align: left;
 }
 
-.image {
+/*.image {
   background-repeat: no-repeat;
   background-size: contain;
   overflow: hidden;
   width: 100%;
   height: 100%;
-}
-
+} */
 .feature-info {
   background-color: #dbdbdb;
   -webkit-box-shadow: 0em 1em 1em #46565e;
@@ -221,6 +213,7 @@ body {
 
 #feature-header {
   font-size: 2em;
+  margin-bottom: 1em;
 }
 
 .feature-txt {
@@ -317,15 +310,15 @@ body {
   background-color: #071013;
   width: 64vw;
   padding: 1em;
-  font-size: 1em;
+  font-size: 1.2em;
+  font-style: italic;
 }
 
-.footer-img {
-  width: 70vw;
-  height: auto;
-  border-radius: 1em;
-}
-
+/*.footer-img {
+    width: 70vw;
+    height: auto;
+    border-radius: 1em;
+  } */
 .footer-about {
   color: #dbdbdb;
 }
