--- a/styles/partials/__footer.scss
+++ b/styles/partials/__footer.scss
@@ -15,14 +15,15 @@
     background-color: $secondary;
     width: 64vw;
     padding: 1em;
-    font-size: 1em;
+    font-size: 1.2em;
+    font-style: italic;
   }
   
-  .footer-img {
+  /*.footer-img {
     width: 70vw;
     height: auto;
     border-radius: 1em;
-  }
+  } */
   
   .footer-about {
     color: $primary;
