--- a/styles/partials/__global.scss
+++ b/styles/partials/__global.scss
@@ -26,3 +26,8 @@ body {
   @include underline;
   color: $primary;
 }
+
+h3 {
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
