--- a/styles/partials/__hero.scss
+++ b/styles/partials/__hero.scss
@@ -38,5 +38,5 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10vh;
+  margin-bottom: 8vh;
 }
